fix overlapping <hr>s in members list by setting min-height

--- a/sass/pages/_directories.scss
+++ b/sass/pages/_directories.scss
@@ -259,3 +259,7 @@ body.activity:not(.bp-user)  .item-list-tabs ul li a span,
 #members-dir-list #members-list .activity {
   display: none !important;
 }
+
+#members-list li {
+  min-height: 3em;
+}
